# TheExtraPass

./: .gitignore  20220208_test_consistency_eda.py  20220210_consistency_analysis.py  20220215_test_analyse_gamelogs.py  20220215_test_analyse_gamelogs_old.py  20220215_test_analyse_gamelogs_pub_blog.py  20220222_test_pbp_parser.py  20220223_test_parse_subs.py  20220225_pbp_onoff_splits.py  20220316_pbp_shot_dists.py  20220403_shotblot_comp_loop.py  20220407_shotblot_comp_loop.py  20220407_shotblot_comp_per_game.py  20220413_shotblot_players.py  20220425_get_playoff_shotdata.py  20220427_playoff_gameviz.py  20220430_gameviz_generator.py  20220430_playoff_round_review.py  dataproc.py  get_pl_gamelogs.py  nba_api_test_gamelogs.py  nba_api_test_shotchart.py  pyproject.toml  readme.md  temp.py  test_fetch_tm_gamelogs.py  update_data.py  utils.py  viz.py
data/: team_id_list.csv  team_list.json
data/proc_data/: README.md
dl_data/: README.md
logs/: README.md
