[tool.poetry]
name = "nba_marvin"
version = "0.1.0"
description = ""
authors = ["JP Hwang <me@jphwang.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nba-api = "^1.1.11"
pandas = "^1.4.0"
plotly = "^5.5.0"
black = "^22.1.0"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"
altair = "^4.2.0"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
